	  CONFIG_INTERPRETERS_FICL for consistency with other configuration naming.
	* apps/examples/keypadtest:  A keypad test example contributed by Denis
	  Carikli.
	* apps/examples/elf and nxflat:  If CONFIG_BINFMT_EXEPATH is defined, these
	  tests will now use a relative path to the program and expect the binfmt/
	  logic to find the absolute path to the program using the PATH variable.

6.25 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* Makefiles: Removed dependency of distclean on clean in most top-level
	  files.  It makes sense for 'leaf' Makefiles to have this dependency,
	  but it does not make sense for upper-level Makefiles.
	* apps/namedapp/: Renamed to builtins in preparation for another change.
	* .context:  Removed the .context kludge.  This caused lots of problems
	  when changing configurations because there is no easy way to get the
	  system to rebuild the context.  Now, the context will be rebuilt
	  whenever there is a change in either .config or the Makefile.
	* apps/builtin/registry:  Updated new built-in registration logic to handle
	  cases where (1) old apps/.config is used, and (2) applications ared
	  removed, not just added.
	* apps/examples/nettest/Makefile:  Fix an error that crept in during
	  some of the recent, massive build system changes.
	* apps/builtin/Makefile:  Need to have auto-generated header files
	  in place early in the dependency generation phase to avoid warnings.
	  It is not important if they are only stubbed out header files at
	  this build phase.
	* apps/examples/hidbkd: Now supports decoding of encoded special keys
	  if CONFIG_EXAMPLES_HIDKBD_ENCODED is defined.
	* apps/examples/hidbkd:  Add support for decoding key release events
	  as well.  However, the USB HID keyboard drier has not yet been
	  updated to detect key release events.  That is kind of tricky in
	  the USB HID keyboard report data.
	* apps/examples/wlan: Remove non-functional example.
