@@ -12,7 +12,7 @@
       <h1><big><font color="#3c34ec">
         <i>NuttX RTOS Porting Guide</i>
       </font></big></h1>
-      <p>Last Updated: January 4, 2012</p>
+      <p>Last Updated: January 4, 2013</p>
     </td>
   </tr>
 </table>
